Completed refactor of signup box away from mailchimp to monkeypod; also fixed case-sensitive links to pages and broken include in SleepsAround performance page (and this sitemap).

--- a/styles/home.css
+++ b/styles/home.css
@@ -205,7 +205,7 @@ a:hover {
 	}
 
 	#solicit {
-		background-color: #eee;
+		/*background-color: #eee;*/
 		border: 1px solid #999;
 		border-top: 1px solid #ccc;
 		border-right: 1px solid #ccc;
@@ -339,6 +339,7 @@ a:hover {
 #footer {
 	color: rgb(110,110,110);
 	font-size: 11px;
+	padding-top: 10px;
 	text-align: center;
 }
 
